--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modern-drawer": "^1.4.0",
     "react-phone-number-input": "^3.4.8",
     "react-player": "^2.16.0",
+    "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
