--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "country-data": "^0.0.31",
     "country-state-city": "^3.2.1",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "react-simple-captcha": "^9.3.1",
     "tailwind-merge": "^2.5.4",
     "typeit-react": "^2.7.3",
