--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-REACT_APP_RAZORPAY_KEY=rzp_test_BX5YdcJz4K3O19
+REACT_APP_RAZORPAY_KEY=rzp_test_BX5YdcJz4K3O19 #LIVE
+# TEST REACT_APP_RAZORPAY_KEY=rzp_test_BX5YdcJz4K3O19
 REACT_APP_TAVUS_API_KEY=d803cf15030848f68495bf017f128d5c
 REACT_APP_TAVUS_REPLICA_ID=rb17cf590e15
 REACT_APP_BOLNA_API_KEY=bn-140dcf7c5741488da8980990dc68d68c
-REACT_APP_BOLNA_AGENT_ID=ab296795-c925-4508-b64a-7d3db66b54c7
+REACT_APP_BOLNA_AGENT_ID=63e3275b-91db-40a6-9586-d8a0dcf555ad
+# REACT_APP_BOLNA_AGENT_ID=ab296795-c925-4508-b64a-7d3db66b54c7
