--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.1",
     "keen-slider": "^6.8.6",
+    "lenis": "^1.1.14-dev.5",
     "react": "^18.3.1",
     "react-country-phone-input": "^1.0.2",
     "react-dom": "^18.3.1",
